(fix) quote spacing

--- a/assets/scss/pages/_entry.scss
+++ b/assets/scss/pages/_entry.scss
@@ -11,7 +11,7 @@
         }
     }
 
-    blockquote {
+    * + blockquote {
         margin-top: $spacing-80;
     }
 }
